     ok djm@ markus@
   - djm@cvs.openbsd.org 2009/10/06 04:46:40
     [session.c]
     bz#1596: fflush(NULL) before exec() to ensure that everying (motd
     in particular) has made it out before the streams go away.
   - djm@cvs.openbsd.org 2008/12/07 22:17:48
     [regress/addrmatch.sh]
     match string "passwordauthentication" only at start of line, not anywhere
     in sshd -T output

20091002
 - (djm) [Makefile.in] Mention readconf.o in ssh-keysign's make deps.
   spotted by des AT des.no

20090926
 - (djm) [contrib/caldera/openssh.spec contrib/redhat/openssh.spec]
         [contrib/suse/openssh.spec] Update for release
 - (djm) [README] update relnotes URL
 - (djm) [packet.c] Restore EWOULDBLOCK handling that got lost somewhere
 - (djm) Release 5.3p1

20090911
 - (dtucker) [configure.ac] Change the -lresolv check so it works on Mac OS X
   10.6 (which doesn't have BIND8_COMPAT and thus uses res_9_query).  Patch
   from jbasney at ncsa uiuc edu.

20090908
 - (djm) [serverloop.c] Fix test for server-assigned remote forwarding port
   (-R 0:...); bz#1578, spotted and fix by gavin AT emf.net; ok dtucker@

20090901
 - (dtucker) [configure.ac] Bug #1639: use AC_PATH_PROG to search the path for
   krb5-config if it's not in the location specified by --with-kerberos5.
   Patch from jchadima at redhat.

20090829
 - (dtucker) [README.platform] Add text about development packages, based on
   text from Chris Pepper in bug #1631.

20090828
 - dtucker [auth-sia.c] Roll back the change for bug #1241 as it apparently
   causes problems in some Tru64 configurations.
 - (djm) [sshd_config.5] downgrade mention of login.conf to be an example
   and mention PAM as another provider for ChallengeResponseAuthentication;
   bz#1408; ok dtucker@
 - (djm) [sftp-server.c] bz#1535: accept ENOSYS as a fallback error when
   attempting atomic rename(); ok dtucker@
 - (djm) [Makefile.in] bz#1505: Solaris make(1) doesn't accept make variables